--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -179,7 +179,7 @@
 		<div class="row">
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
-					<%= image_tag 'p1.jpeg', class:"card-image"%>
+					<%= image_tag 'p1.jpeg', height: 380, class:"card-image"%>
 				  <div class="card-body">
 				 	<h4><i>"Helen Garden"</i></h4>
 				    <h6>Author : Estera Reut</h6>
@@ -190,7 +190,7 @@
 			<div class="col">	
 				<div class="card shadow card-boxes" style="width: 21rem;">
 					<!-- <div class="card-image"> -->
-				  	<%= image_tag 'p2.jpeg', class:"card-image"%>	
+				  	<%= image_tag 'p2.jpeg', height: 380, class:"card-image"%>	
 					<!-- </div> -->
 				  <div class="card-body">
 				   	<h4><i>"Man faces"</i></h4>
@@ -201,7 +201,7 @@
 			</div>
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
-				  	<%= image_tag 'p3.jpeg', class:"card-image" %>
+				  	<%= image_tag 'p3.jpeg', height: 380, class:"card-image" %>
 				  <div class="card-body">
 				  	<h4><i>"Helen Garden"</i></h4>
 				    <h6>Author : Geordanna Cordero</h6>
@@ -211,7 +211,7 @@
 			</div>
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
-				  	<%= image_tag 'p4.jpeg', class:"card-image" %>
+				  	<%= image_tag 'p4.jpeg', height: 380, class:"card-image" %>
 				  <div class="card-body">
 				   	<h4><i>"Helen Garden"</i></h4>
 				    <h6>Author : Jean Carlo Emer</h6>
@@ -221,7 +221,7 @@
 			</div>
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
-				  <%= image_tag 'p5.jpeg', class:"card-image" %>
+				  <%= image_tag 'p5.jpeg', height: 380, class:"card-image" %>
 				  <div class="card-body">
 				  	<h4><i>"Helen Garden"</i></h4>
 				    <h6>Author : Jon Tyson</h6>
@@ -231,7 +231,7 @@
 			</div>
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
-				  <%= image_tag 'p6.jpeg', class:"card-image" %>
+				  <%= image_tag 'p6.jpeg', height: 380, class:"card-image" %>
 				  <div class="card-body">
 				    <h4><i>"Persian Princess"</i></h4>
 				    <h6>Author : McGill Brary</h6>
