--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -110,16 +110,26 @@ html {
 // ////////////////////////////Some Favourite arts///////////////////////////////////
 
 .card {
-	height: 450;
-	width: 100%;
+	height: 550;
+	// width: 100%;
 	margin-bottom: 25px;
-	// border-radius: 10px;
+	border-radius: 10px;
 }
 
 
+.card-image {
+	// height: 350px;
+	border-radius: 10px 10px 0 0;
+	// width: 100%;
+	// height: auto;
+	// object-fit: center;
+    // object-cover: fill;
+    // object-position: 50% 50%;
+}
 
-
-
+.card-body {
+	overflow: scroll;
+}
 
 .card-text {
 	color: #5bc0be;
