--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -23,6 +23,7 @@
 				<%= f.input :name, placeholder: "Name", label: false %>
 				<%= f.input :artist, placeholder: "Artist", label: false %>
 				<%= f.input :price, placeholder: "Price", label: false %>
+				<%= f.input :style, collection: Art::STYLES %>
 				<%= f.input :photo, as: :file, label: false %>
 				<%= f.submit class:"btn btn-primary mr-2"%>
 				<%= link_to "Back", root_path, class: "btn btn-info" %>
