--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,5 +4,9 @@
 }
 
 .nav-button {
-	background-color: #5bc0be;
+	background-color: #cb997e;
+}
+
+.signout-button {
+	background-color: #e56b6f;
 }
