--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -6,7 +6,7 @@
 	</div>
     <div class="d-flex mr-4">
 		<%= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-3" %>
-		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white nav-button"%>
+		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button"%>
 	</div>
 </div>
 
