--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,33 +1,46 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
     <!-- <div class="text-secondary"> -->
-		<div>
-			<%= link_to root_path do  %>
-		        <%= image_tag 'logo.png', class: "logo ml-1" %>		
-			<% end %>	
-		</div>
-        <div class="d-flex">
-			<!-- < %= link_to "Back", arts_path, class: "btn btn-info mr-3" %>	
-						 -->
-			<!-- < %= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-2" %> -->
-			<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white mr-4 nav-button" %>
-		</div>
+	<div>
+		<%= link_to root_path do  %>
+	        <%= image_tag 'logo.png', class: "logo ml-1" %>		
+		<% end %>	
+	</div>
+    <div class="d-flex">
+		<!-- < %= link_to "Back", arts_path, class: "btn btn-info mr-3" %>	
+					 -->
+		<!-- < %= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-2" %> -->
+		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded signout-button text-white mr-4 nav-button" %>
+	</div>
     <!-- </div> -->
 </div>
 
+<div style="background-color: #f4f3ee;">	
+	<div class="container d-flex justify-content-center full-page" style="margin-top: 100px">
+		<div class="d-flex  justify-content-between">
+			
+			<div class="mt-5 col mr-5 p-4">
+				<h1 class="" style="color: rgba(0, 0, 0, 0.5);">Sell or Rent Your Arts With Us</h1>
+				<h5 class="" style="color: rgba(0, 0, 0, 0.5);">Submit Your Art For Review By Our Curators</h5>
+				<div class="d-flex mt-5">
+					<%= image_tag 'login4.jpeg', width:220, height:220 %>
+					<%= image_tag 'login1.jpeg', width:220, height:220 %>
+				</div>
+			</div>
 
-	<div class="container d-flex justify-content-center full-page" style="margin-top: 140px">
-		<div class="col-sm-6 p-4" style="background-color: #f3f3f4">
-		<h2 class="text-center mt-3">Upload New Art</h2>
-			<div class="art-form p-4 mt-3">
-				<%= simple_form_for(@art) do |f|  %>
-				<%= f.input :name, placeholder: "Name", label: false %>
-				<%= f.input :artist, placeholder: "Artist", label: false %>
-				<%= f.input :price, placeholder: "Price", label: false %>
-				<%= f.input :style, collection: Art::STYLES %>
-				<%= f.input :photo, as: :file, label: false %>
-				<%= f.submit class:"btn btn-primary mr-2"%>
-				<%= link_to "Back", root_path, class: "btn btn-info" %>
-				<% end %>
+			<div class="shadow rounded mt-4 mb-4 col-sm-5" data-aos="flip-left" style="background-color: #fff;">
+				<div class="p-4 mt-4">
+					<%= simple_form_for(@art) do |f|  %>
+					<%= f.input :name, placeholder: "Name", label: false %>
+					<%= f.input :artist, placeholder: "Artist", label: false %>
+					<%= f.input :price, placeholder: "Price", label: false %>
+					<%= f.input :rate, placeholder: "Daily rate", label: false, prepend: '£' %>
+					<%= f.input :style, collection: Art::STYLES %>
+					<%= f.input :photo, as: :file, label: false %>
+					<%= f.submit "Upload", class:"btn btn-outline-success"%>
+					<%= link_to "Back", root_path, class: "btn btn-outline-dark border" %>
+					<% end %>
+				</div>
 			</div>
 		</div>
 	</div>	
+</div>
