--- a/app/views/bookings/_booking_form.html.erb
+++ b/app/views/bookings/_booking_form.html.erb
@@ -2,6 +2,7 @@
 <%= simple_form_for [@art, @booking] do |f| %>
   <%= f.input :start_date, as: :date, html5: true %>
   <%= f.input :end_date, as: :date, html5: true %>
-  <%= f.submit class: 'btn btn-primary' %>
+   <%= f.input :approved, :as => :hidden, :input_html => { value: false } %>
+  <%= f.submit class: 'btn text-white', style:"background-color:#5bc0be" %>
 <% end %>
 </div>
