--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -21,14 +21,14 @@
 			</div>		
 		</div>
 		<div class="col">	
-			<p class="p-3"><h1><strong><i style="color: #e9afa3;">"<%= @art.name %>"</i></strong></h1></p>	
+			<p class="p-3"><h1><strong><i style="color: #e9afa3;">"<%= @art.name.capitalize %>"</i></strong></h1></p>	
 			<div class="card-content d-flex mt-4">
 				<div class="un-list p-3" style="color: rgba(0, 0, 0, 0.5);">
 					<li class="mb-3"><i class="fas fa-user mr-3 text-dark"></i><%= @art.artist.capitalize %></li>
 					<li class="mb-3"><i class="fas fa-pound-sign mr-3 text-dark"></i><%= @art.price %>.00</li>
 					<li class="mb-3"><i class="fas fa-truck-pickup mr-3 text-dark"></i>39.4 W x 59.1 H x 0.8 in</li>
 					<li class="mb-3"><%= @art.style %></li>
-					<li class="mb-3">Rate |<i class="text-dark mr-1"></i>£20<%= @art.rate %>per day</li>
+					<li class="mb-3">Rate |<i class="text-dark mr-1"></i><%= @art.rate %>per day</li>
 					<li class="mb-3">Ready to hang | Yes</li>
 					<li class="mb-3">Type | Original</li>
 					<li class="mb-3">Frame | No</li>
