--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -25,6 +25,7 @@
 						    <h5><i class="text-dark">"<%= art.name %>"</i></h5>	
 							<h6 class="text-dark">Author : <%= art.artist %></h6> 
 							<p class="card-text">£<%= art.price %></p> 
+							<p class="card-text">£<%= art.rate %>per day</p>
 					   	</div>
 			 	  	</div>
 				<% end %>
