--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -28,7 +28,7 @@
 					<li class="mb-3"><i class="fas fa-pound-sign mr-3 text-dark"></i><%= @art.price %>.00</li>
 					<li class="mb-3"><i class="fas fa-truck-pickup mr-3 text-dark"></i>39.4 W x 59.1 H x 0.8 in</li>
 					<li class="mb-3"><%= @art.style %></li>
-					<!-- <li class="mb-3">Rate |<i class="text-dark mr-1"></i>< %= @art.rate %>per day</li> -->
+					<li class="mb-3 text-dark mr-1">Rate |<%= @art.rate %>per day</li>
 					<li class="mb-3">Ready to hang | Yes</li>
 					<li class="mb-3">Type | Original</li>
 					<li class="mb-3">Frame | No</li>
