--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -110,7 +110,7 @@ html {
 // ////////////////////////////Some Favourite arts///////////////////////////////////
 
 .card {
-	height: 550;
+	// height: 550;
 	// width: 100%;
 	margin-bottom: 25px;
 	border-radius: 10px;
@@ -127,7 +127,7 @@ html {
 }
 
 .card-text {
-	color: #5bc0be;
+	// color: #5bc0be;
 	text-decoration: none;
 }
 
