--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -9,7 +9,7 @@
 		<!-- < %= link_to "Back", arts_path, class: "btn btn-info mr-3" %>	
 					 -->
 		<!-- < %= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-2" %> -->
-		<%= link_to "Back", root_path, class: "btn btn-outline-dark border mr-2" %>
+		<%= link_to "Back", arts_path, class: "btn btn-outline-dark border mr-2" %>
 		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded signout-button text-white mr-4 nav-button" %>
 	</div>
     <!-- </div> -->
@@ -19,14 +19,16 @@
 	<div class="container d-flex justify-content-center full-page" style="margin-top: 100px">
 		<div class="d-flex  justify-content-between">
 			
-			<div class="mt-5 col mr-5 p-4">
+			<div class="mt-2 col mr-5 p-4">
 				<h1 class="" style="color: rgba(0, 0, 0, 0.5);">Sell or Rent Your Arts With Us</h1>
-				<h5 class="" style="color: rgba(0, 0, 0, 0.5);">Submit Your Art For Review By Our Curators</h5>
-				<div class="d-flex mt-5">
-					<%= image_tag 'login4.jpeg', width:220, height:220 %>
-					<%= image_tag 'login1.jpeg', width:220, height:220 %>
+				<h5 class="" style="color: rgba(0, 0, 0, 0.5);">Edit your Art</h5>
+				<div class="d-flex mt-3">
+					<%= cl_image_tag @art.photo.key, width:370, height:350, crop: :fill, style:"border-radius:20px;" %>
+					<!-- < %= image_tag 'login4.jpeg', width:220, height:220 %> -->
+					<!-- < %= image_tag 'login1.jpeg', width:220, height:220 %> -->
 				</div>
 			</div>
+
 			<%= render "arts/art_form" %>
 		</div>
 	</div>	
