--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -5,6 +5,7 @@
 			<% end %>	
 		</div>
         <div>
+         <%= link_to "Back", arts_path, class: "btn btn-info text-white mr-3"%>
        	 <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-4"%>
 		</div>
 </div>
@@ -15,8 +16,7 @@
 			<% if @art.photo.attached? %>
 				<%= cl_image_tag @art.photo.key, width:470, height:650, crop: :fill, style:"border-radius:20px;" %>
 			<% end %>
-			<div class="col p-5 ml-5">
-				<%= link_to "Back", arts_path, class: "btn btn-info text-white mr-3"%>	
+			<div class="text-center p-5">			
 				<%= link_to "Purchase", arts_path, class: "btn btn-dark text-white" %>				
 			</div>		
 		</div>
@@ -27,8 +27,8 @@
 					<li class="mb-3"><i class="fas fa-user mr-3 text-dark"></i><%= @art.artist.capitalize %></li>
 					<li class="mb-3"><i class="fas fa-pound-sign mr-3 text-dark"></i><%= @art.price %>.00</li>
 					<li class="mb-3"><i class="fas fa-truck-pickup mr-3 text-dark"></i>39.4 W x 59.1 H x 0.8 in</li>
-					<li class="mb-3"><%= @art.style %></li>
-					<li class="mb-3 text-dark mr-1">Rate |<%= @art.rate %>per day</li>
+					<li class="mb-3">Style : <%= @art.style %></li>
+					<li class="mb-3 text-dark mr-1">Rate : £<%= @art.rate %> per day</li>
 					<li class="mb-3">Ready to hang | Yes</li>
 					<li class="mb-3">Type | Original</li>
 					<li class="mb-3">Frame | No</li>
