--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
 
 <div style="background-color: #f4f3ee;">
-  <div class="container justify-content-center full-page rounded p-5" style="margin-top: 100px">
+  <div class="container justify-content-center full-page rounded p-5" style="margin-top: 90px">
     <div class="d-flex  justify-content-between">
       <!-- <div class=""> -->
         <div class="col-sm-6 mt-5 p-4">
@@ -22,8 +22,8 @@
         </div>
       <!-- </div> -->
     <!-- <div class=""> -->
-      <div class="shadow rounded col-sm-6" data-aos="flip-left" style="background-color: #fff; height: 570px; width: 500px;"> 
-        <div class=" p-3 mt-4">
+      <div class="shadow rounded col-sm-6" data-aos="flip-left" style="background-color: #fff;"> 
+        <div class=" p-3 mt-2">
           <!-- <h2 class="text-center">Sign up</h2> -->
 
             <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
