--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -15,11 +15,11 @@
 	<h3 class="text-center p-2" style="color: #5bc0be">View All of Our Arts</h3>
 	<div class="row">
 		<% @arts.each do |art| %>
-			<div class="col-sm-4 card-boxes mt-4">	
+			<div class="col-sm-4 card-boxes">	
 				<%= link_to art_path(art), class:"text-decoration-none" do %>
-					<div class="card" style="width: 22rem;">
+					<div class="card" style="width: 21rem;">
 						<% if art.photo.attached? %>
-						<%= cl_image_tag art.photo.key, width: 350, height: 280, crop: :fill, class: "card-image" %>
+						<%= cl_image_tag art.photo.key, width: 335, height: 280, class: "card-image" %>
 						<% end %>
 					   	 <div class="card-body">
 						    <h5><i class="text-dark">"<%= art.name %>"</i></h5>	
