--- a/app/views/arts/_art_form.html.erb
+++ b/app/views/arts/_art_form.html.erb
@@ -1,4 +1,4 @@
-<div class="shadow rounded mt-4 mb-4 col-sm-5" data-aos="flip-left" style="background-color: #fff;">
+<div class="shadow rounded mt-3 mb-4 col" data-aos="flip-left" style="background-color: #fff;">
 	<div class="p-4 mt-4">
 		<%= simple_form_for(@art) do |f|  %>
 		<%= f.input :name, placeholder: "Name", label: false %>
