--- a/app/views/bookings/_booking_form.html.erb
+++ b/app/views/bookings/_booking_form.html.erb
@@ -1,8 +1,10 @@
-<div class="bookings-form p-3" >
-	<%= simple_form_for [@art, @booking] do |f| %>
-	  <%= f.input :start_date, as: :date, html5: true %>
-	  <%= f.input :end_date, as: :date, html5: true %>
-	   <%= f.input :approved, :as => :hidden, :input_html => { value: false } %>
-	  <%= f.submit class: 'btn text-white', style:"background-color:#5bc0be" %>
-	<% end %>
+<div class="shadow rounded mt-4 mb-4" data-aos="flip-left" style="background-color: #fff;">
+	<div class="bookings-form p-3" >
+		<%= simple_form_for [@art, @booking] do |f| %>
+		  <%= f.input :start_date, as: :date, html5: true %>
+		  <%= f.input :end_date, as: :date, html5: true %>
+		   <%= f.input :approved, :as => :hidden, :input_html => { value: false } %>
+		  <%= f.submit class: 'btn text-white', style:"background-color:#5bc0be" %>
+		<% end %>
+	</div>
 </div>
