--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -16,19 +16,18 @@
 </div>
 
 <div style="background-color: #f4f3ee;">	
-	<div class="container d-flex justify-content-center full-page" style="margin-top: 100px">
+	<div class="containerr d-flex justify-content-center full-page" style="margin-top: 100px">
 		<div class="d-flex  justify-content-between">
 			
-			<div class="mt-2 col mr-5 p-4">
-				<h1 class="" style="color: rgba(0, 0, 0, 0.5);">Sell or Rent Your Arts With Us</h1>
+			<div class="mt-5 col mr-5">
+				<h2 class="" style="color: rgba(0, 0, 0, 0.5);">Sell or Rent Your Arts With Us</h2>
 				<h5 class="" style="color: rgba(0, 0, 0, 0.5);">Edit your Art</h5>
 				<div class="d-flex mt-3">
-					<%= cl_image_tag @art.photo.key, width:370, height:350, crop: :fill, style:"border-radius:20px;" %>
+					<%= cl_image_tag @art.photo.key, width:350, height:350, crop: :fill, style:"border-radius:20px;" %>
+				</div>
 					<!-- < %= image_tag 'login4.jpeg', width:220, height:220 %> -->
 					<!-- < %= image_tag 'login1.jpeg', width:220, height:220 %> -->
-				</div>
 			</div>
-
 			<%= render "arts/art_form" %>
 		</div>
 	</div>	
