--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
     <div>
+       <%= link_to root_path do  %>
         <%= image_tag 'logo.png', class: "logo ml-1" %>
+        <% end %>
     </div>
     <div>
       <%= link_to "Log in", new_session_path(resource_name), class: "btn rounded text-white mr-4 nav-button"%>   
