--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,18 +1,33 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
+	
 	<div>
 		<%= link_to root_path do  %>
 	        <%= image_tag 'logo.png', class: "logo ml-1" %>		
 		<% end %>	
 	</div>
-    <div class="d-flex mr-4">
-		<%= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-3" %>
-		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button"%>
-	</div>
+    <!-- <div class=" mr-4"> -->
+    	<% if user_signed_in? %>
+	    	<div class="d-flex" style="list-style: none">
+	    		<li class="nav-item">
+		    		<%= link_to "Home", root_path, class: " nav-link mr-1", id: "home-button" %>
+		    	</li>
+				<li class="nav-item">
+             		<%= link_to "Upload Art", new_art_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
+          		</li>
+          		<li class="nav-item">
+             		<%= link_to "All Bookings", bookings_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
+          		</li>
+	    	</div>
+				<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-3"%>
+		<% else %>
+				<%= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-3" %>
+		<% end %>
+	<!-- </div> -->
 </div>
 
 
 <div class="container full-page" style="margin-top: 120px;">		
-	<h3 class="text-center p-2" style="color: #5bc0be">View All of Our Arts</h3>
+	<h3 class="text-center p-3" style="color: #5bc0be">View All of Our Arts</h3>
 	<div class="row">
 		<% @arts.each do |art| %>
 			<div class="col-sm-4 card-boxes">	
@@ -27,10 +42,7 @@
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Style : <%= art.style %></h6> 
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Cost : £<%= art.price %></h6> 
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Rent : £<%= art.rate %> per day</h6>
-					   	</div>
-					   	<div class="ml-3 mb-2 ">
-					   		<%= link_to 'Edit', edit_art_path(art.id), class: "btn btn-warning text-white rounded" %>
-					   		<%= link_to 'Delete', art_path(art.id), method: :delete,  data: { confirm: "Are you sure?" }, class: "btn btn-dark rounded" %>
+							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);"> Owner : <%= art.owner %></h6>						
 					   	</div>
 			 	  	</div>
 				<% end %>
