--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,40 +4,61 @@
 		        <%= image_tag 'logo.png', class: "logo ml-2" %>		
 			<% end %>	
 		</div>
-        <div>
-         <%= link_to "Back", arts_path, class: "btn btn-info text-white mr-3"%>
+        <div class="d-flex">
+		 <%= link_to "Home", root_path, class: " nav-link mr-2", id: "home-button" %>
+		 <%= link_to "Explore", arts_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
+		</div>
        	 <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-4"%>
-		</div>
 </div>
 
-<div class="container">
-	<h1 class="text-center p-4" style="color: #5bc0be;"> Welcome <%= current_user.first_name %>, Here are your Bookings</h1>
-	<div class="row">
-	<% if @booking.present? %>	
-		<div class=" mt-4 col">
-			<% if @art.photo.attached? %>
-				<%= cl_image_tag @art.photo.key, width:420, height:470, crop: :fill, style:"border-radius:20px;" %>
+<div class=" full-page d-flex justify-content-center p-4 ml-4" style="margin-top: 100px;">	
+
+	<div class="col-sm-6">
+		<h3 class="text-center mb-4" style= "color: rgba(0, 0, 0, 0.5);">View All of Your Bookings</h3>	
+		<div class="row">
+			<% if @bookings.present? %>
+			<% @bookings.each do |booking| %>
+				<div class="card mr-2" style="width: 18rem;">
+					<%= cl_image_tag booking.art.photo.key, height: 220, class: "card-image" %>
+				   	<div class="card-body">
+				   	 	<h5><i class="text-dark">"<%= booking.art.name %>"</i></h5>
+		                <p>Start date:<%= booking.start_date.strftime("%d %B, %Y") %></p>
+		                <p>End date: <%= booking.end_date.strftime("%d %B, %Y") %></p>
+		                <p><%= booking.approved ? 'Owner has approved' : 'Pending approval' %></p>  		<div class="ml-3">
+		                <%= link_to 'Edit', edit_art_booking_path(booking.art, booking), class: "btn btn-success mr-1"  %>
+						<%= link_to 'Cancel Booking', booking_path(booking.id), method: :delete , data: { confirm: "Are you sure?" }, class: "btn btn-warning" %> 	
+		                </div>		
+				   	</div>
+		 	  	</div>
 			<% end %>
-			<div class="text-center p-5">
-				<%= link_to 'Edit', edit_art_booking_path(@art, @booking), class: "btn btn-warning text-white rounded" %>		
-				<!-- < %= link_to "Purchase", arts_path, class: "btn btn-dark text-white" %>				 -->
-			</div>		
-		</div>
-
-		<div class="col">
-			<p class="p-3"><h1><strong><i style="color: #e9afa3;">"<%= @art.name.capitalize %>"</i></strong></h1></p>
-			<!-- <div> -->
-			<div class="un-list p-3" style="color: rgba(0, 0, 0, 0.5);">
-				<li class="mb-3"><i class="fas fa-user mr-3 text-dark"></i><%= @art.artist.capitalize %></li>
-				<li class="mb-3"><i class="fas fa-pound-sign mr-3 text-dark"></i><%= @art.price %>.00</li>
-				<li class="mb-3  mr-1">Rate : £<%= @art.rate %> per day</li>
-			</div>
-			<!-- </div> -->
-		</div>
-		<% else %>
-		<h1>Sorry, you donot have any Bookings Yet.</h1>
-	<% end %>
+			<% end %>
+		</div>	
 	</div>
+
+	<div style="border-left: 2px solid grey; height: 100%; position: absolute; left: 50%; margin-left: -3px; top: 0;"></div>
+
+	<div class="col-sm-6 ml-5">
+		<h3 class="text-center mb-4" style= "color: rgba(0, 0, 0, 0.5);">View All of Your Arts</h3>	
+		<div class="row">
+			<% @owner_bookings.each do |owner_booking| %>
+				<div class="card mr-2" style="width: 18rem;">
+					<%= cl_image_tag owner_booking.art.photo.key, height: 220, class: "card-image" %>
+				   	<div class="card-body">
+				   	 	<h5><i class="text-dark">"<%= owner_booking.art.name %>"</i></h5>
+		                <p>Start date:<%= owner_booking.start_date.strftime("%d %B, %Y") %></p>
+		                <p>End date: <%= owner_booking.end_date.strftime("%d %B, %Y") %></p>
+		                <p><%= owner_booking.approved ? 'Approved' : 'Pending Approval' %></p>
+		                <!-- <div class="">     	 -->
+			                <%= render 'approval_form', owner_booking: owner_booking %>
+			                <%= link_to 'Deny Request', booking_path(owner_booking), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-outline-secondary w-100 mt-2"  %>
+		                <!-- </div> -->
+				   	</div>
+		 	  	</div>
+			<% end %>
+		</div>
+	</div>
+
+
 </div>
 
-
+			     
